# g4-driver

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: commit.md
controller/: Cargo.toml
controller/src/: can.rs  main.rs  state.rs  ui.rs
controller/src/can/: manager.rs  mod.rs  protocol.rs  setup.rs
controller/src/ui/: connection.rs  control.rs  mod.rs  settings.rs  settings_old.rs
controller/src/ui/components/: banner.rs  button.rs  card.rs  mod.rs  number_input.rs  section_header.rs  status_indicator.rs  toggle.rs
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config.toml
firmware/src/: benchmark.rs  can_protocol.rs  config.rs  config_storage.rs  eeprom.rs  foc.rs  hall_tim.rs  main.rs  motor_driver.rs  state.rs  tasks.rs  voltage_monitor.rs
firmware/src/config/: eeprom.rs  params.rs  storage.rs
firmware/src/foc/: calibration.rs  hall_sensor.rs  openloop_six_step.rs  pi_controller.rs  shaft_position.rs  svpwm.rs  transforms.rs
firmware/src/tasks/: can.rs  motor_control.rs  voltage_monitor.rs
firmware/src/tasks/motor_control/: calibration_mode.rs  foc_mode.rs  openloop_mode.rs
scripts/: can.sh  can_debug.sh
src/: benchmark.rs  can_protocol.rs  foc.rs  hall_tim.rs  hardware.rs  main.rs  tasks.rs  voltage_monitor.rs
src/foc/: hall_sensor.rs  pi_controller.rs  svpwm.rs  transforms.rs
src/tasks/: can.rs  led.rs  motor_control.rs
